# HH_vacancy_parser

./: README.md  config.py  pyproject.toml  pytest.ini  testik.py
data/: example.json  vacancies.json
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6_api_py.html  z_145eef247bfb46b6_main_py.html  z_145eef247bfb46b6_saver_py.html  z_145eef247bfb46b6_vacancies_py.html
src/: API_connect.py  api.py  database_manager.py  main.py  saver.py  vacancies.py
tests/: test_api.py  test_database_manager.py  test_main.py  test_saver.py  test_vacancies.py
