[project]
name = "pythonproject1"
version = "0.1.0"
description = ""
authors = [
    {name = "takinashida",email = "takinashida@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.3.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
requests = "^2.32.4"

