[tool.poetry]
package-mode = false
name = "hh-vacancy-parser"
version = "0.1.0"
description = ""
authors = ["takinashida <takinashida@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
psycopg2-binary = "^2.9.10"
psycopg2 = "^2.9.10"
dotenv = "^0.9.9"



[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
requests = "^2.32.4"
psycopg2 = "==2.9.10"
python-dotenv = "==1.1.1"

[tool.poetry.group.lint.dependencies]
mypy = "^1.16.1"
flake8 = "^7.2.0"
black = "^25.1.0"
isort = "^6.0.1"

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = 'venv'

[tool.black]
# Максимальная длина строки
line-length = 119
# Файлы, которые не нужно форматировать
exclude = '''
(
  /(
      \.eggs         # Исключить несколько общих каталогов
    | \.git          # в корне проекта
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | dist
  )/
  | foo.py           # Также отдельно исключить файл с именем foo.py
                     # в корне проекта
)
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

